// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PaymentFormLayout loading correctly 1`] = `
<div
  className="mobile-payment__operator"
>
  <div
    className="mobile-payment__operator-wrapper"
  >
    <div
      className="spinner"
    />
  </div>
</div>
`;

exports[`renders PaymentFormLayout loading correctly 2`] = `
<div
  className="mobile-payment__operator"
>
  <div
    className="mobile-payment__operator-wrapper"
  >
    <div
      className="mobile-payment__operator-form"
    >
      <p
        className="mobile-payment__operator-legend"
      >
        Выберите оператора для того, чтобы перейти к форме оплаты
      </p>
      <div
        className="Select has-value is-clearable is-searchable Select--single"
        style={undefined}
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={undefined}
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-2--value"
          >
            <div
              className="Select-value"
              style={undefined}
              title={undefined}
            >
              <span
                aria-selected="true"
                className="Select-value-label"
                id="react-select-2--value-item"
                role="option"
              >
                Мегафон
              </span>
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-2--value"
                aria-describedby={undefined}
                aria-expanded="false"
                aria-haspopup="false"
                aria-label={undefined}
                aria-labelledby={undefined}
                aria-owns=""
                className={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                tabIndex={undefined}
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            aria-label="Clear value"
            className="Select-clear-zone"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            title="Clear value"
          >
            <span
              className="Select-clear"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&times;",
                }
              }
            />
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
      <a
        className="mobile-payment__operator-to-pay"
        onClick={[Function]}
      >
        Перейти к оплате
      </a>
    </div>
  </div>
</div>
`;

exports[`renders PaymentFormLayout loading correctly 3`] = `
<div
  className="mobile-payment__operator"
>
  <div
    className="mobile-payment__operator-wrapper"
  >
    <div
      className="mobile-payment__operator-form"
    >
      <p
        className="mobile-payment__operator-legend"
      >
        Выберите оператора для того, чтобы перейти к форме оплаты
      </p>
      <div
        className="Select is-clearable is-searchable Select--single"
        style={undefined}
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={undefined}
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-3--value"
          >
            <div
              className="Select-placeholder"
            >
              Выберите оператора
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-3--value"
                aria-describedby={undefined}
                aria-expanded="false"
                aria-haspopup="false"
                aria-label={undefined}
                aria-labelledby={undefined}
                aria-owns=""
                className={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                tabIndex={undefined}
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
      <a
        className="mobile-payment__operator-to-pay mobile-payment__operator-to-pay--disabled"
        onClick={[Function]}
      >
        Перейти к оплате
      </a>
    </div>
  </div>
</div>
`;

exports[`renders PaymentFormLayout loading correctly 4`] = `
<div
  className="mobile-payment__operator"
>
  <div
    className="mobile-payment__operator-wrapper"
  >
    <div
      className="mobile-payment__operator-form-error"
    >
      <p
        className="mobile-payment__operator-form-error-text"
      >
        Что-то пошло не так. Пожалуйста, обновите страницу.
      </p>
      <div
        className="mobile-payment__operator-form-error-refresh-img"
        onClick={[Function]}
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      />
    </div>
  </div>
</div>
`;
